@@ -17,7 +17,7 @@ LIBPL=		html_write.pl http_client.pl http_header.pl \
 		http_mime_plugin.pl http_sgml_plugin.pl \
 		mimepack.pl mimetype.pl dcg_basics.pl \
 		thread_httpd.pl xpce_httpd.pl inetd_httpd.pl \
-		http_wrapper.pl http_open.pl
+		http_wrapper.pl http_open.pl http_session.pl
 EXAMPLES=	demo_body.pl demo_client.pl demo_threads.pl demo_xpce.pl
 EXAMPLEEXE=	demo_inetd		
 XPCEPL=		http_image.pl
